# eyecheck

./: .gitignore  LICENSE  README.md  eyecheck.ci.example.json
.github/workflows/: visual-regression.yml
core/: Cargo.toml
core/src/: analyze.rs  antialiasing.rs  batch.rs  clustering.rs  compare.rs  diff_image.rs  junit.rs  main.rs  report.rs  yiq.rs
mcp-server/: package-lock.json  package.json
mcp-server/src/: config.ts  core-bridge.ts  index.ts  storage.ts  tokens.ts
mcp-server/src/renderers/: flutter.ts  paparazzi.ts  playwright.ts  xcode.ts
mcp-server/src/tools/: approve.ts  check.ts  history.ts  set-reference.ts  set-tokens.ts  status.ts  watch.ts
test/: integration.test.ts
