[package]
name = "eyecheck-core"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
image = "0.25"
image-compare = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
anyhow = "1"
thiserror = "2"
